<resources>
    <string name="app_name">RoomForStudents</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="address_view">Address</string>
    <string name="number_view">Number</string>
    <string name="price_view">Price</string>
    <string name="image_view">Image</string>
    <string name="filtrar">Filter</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Enter</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="Map">Map</string>
    <string name="Details">Details</string>
    <string name="insert">Insert Room</string>
    <string name ="delete">Delete</string>
    <string name ="edit">Edit</string>
    <string name="myrooms">My Rooms</string>
    <string name="allrooms">All Rooms</string>
    <string name="logout">Logout</string>
    <string name="personalArea">Personal Area</string>
    <string name="qrcode">Qrcode</string>
    <string name="register">Register</string>
    <string name="adress2">Address*</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude*</string>
    <string name="rooms">Number of Rooms*</string>
    <string name="wc">Number of Bathrooms*</string>
    <string name="furniture">Furniture*</string>
    <string name="contacto">Contact*</string>
    <string name="price">Price (per month)*</string>
    <string name="obs">Observations*</string>
    <string name="insertImage">Insert Image</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="diff_password">Both passwords must be the same</string>
    <string name="alreadyQrcode">QrCode is already visible</string>
    <string name="editRoom">Edit Room</string>
    <string name="Rooms">"rooms "</string>
    <string name="money">€/month</string>
    <string name="bathroom">bathrooms</string>
</resources>