<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/allrooms"/>
    <item
        android:id="@+id/nav_mapa"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/Map"/>
    <item
        android:id="@+id/nav_qrcode"
        android:icon="@drawable/ic_baseline_qr_code_24"
        android:title="@string/qrcode"/>

    <item android:title="@string/personalArea">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_baseline_login_24"
                android:title="@string/login"/>
            <item
                android:id="@+id/nav_registo"
                android:icon="@drawable/ic_baseline_app_registration_24"
                android:title="@string/register"/>

        </menu>
    </item>


</menu>
