<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarAnuncios">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/preview"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background" />


                <EditText
                    android:id="@+id/morada"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="30dp"
                    android:background="@color/cinza"
                    android:drawableStart="@drawable/ic_baseline_location_on_24"
                    android:hint="@string/adress2"
                    android:inputType="textAutoComplete"
                    android:minHeight="16dp"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/longitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:background="@color/cinza"
                    android:drawableStart="@drawable/ic_baseline_language_24"
                    android:hint="@string/longitude"
                    android:inputType="textAutoComplete"
                    android:minHeight="16dp"
                    android:padding="10dp" />


                <EditText
                    android:id="@+id/latitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:background="@color/cinza"
                    android:drawableStart="@drawable/ic_baseline_language_24"
                    android:hint="@string/latitude"
                    android:inputType="textAutoComplete"
                    android:minHeight="16dp"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/quartos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:background="@color/cinza"
                    android:drawableStart="@drawable/ic_baseline_king_bed_24"
                    android:hint="@string/rooms"
                    android:inputType="textAutoComplete"
                    android:minHeight="16dp"
                    android:padding="10dp" />


                <EditText
                    android:id="@+id/casaBanho"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:background="@color/cinza"
                    android:drawableStart="@drawable/ic_baseline_bathtub_24"
                    android:hint="@string/wc"
                    android:inputType="textAutoComplete"
                    android:minHeight="16dp"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/mobilada"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:background="@color/cinza"
                    android:drawableStart="@drawable/ic_baseline_home_24"
                    android:hint="@string/furniture"
                    android:inputType="textAutoComplete"
                    android:minHeight="16dp"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/contacto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:background="@color/cinza"
                    android:drawableStart="@drawable/ic_baseline_phone_24"
                    android:hint="@string/contacto"
                    android:inputType="textAutoComplete"
                    android:minHeight="16dp"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/preco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:background="@color/cinza"
                    android:drawableStart="@drawable/ic_baseline_euro_24"
                    android:hint="@string/price"
                    android:inputType="textAutoComplete"
                    android:minHeight="16dp"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/observacao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:background="@color/cinza"
                    android:drawableStart="@drawable/ic_baseline_comment_24"
                    android:hint="@string/obs"
                    android:inputType="textAutoComplete"
                    android:minHeight="16dp"
                    android:padding="10dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/inserirFoto"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@color/verdeEscuro"
                        android:text="@string/insertImage" />

                    <Button
                        android:id="@+id/guardar"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@color/verdeEscuro"
                        android:onClick="editar"
                        android:text="@string/insert" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>